<resources>
    <string name="app_name">BeerCellarTracker</string>
    <string name="sign_in_button">Sign In</string>
    <string name="register_button">Register</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="enter_password">Enter password</string>
    <string name="sign_in_button_context">Sign In Button</string>
    <string name="register_button_context">Register Button</string>
    <string name="password_field_context">Password Field</string>
    <string name="email_field_context">Email field</string>
    <string name="logo_context">Logo</string>
    <string name="email_address_register_content">Email Address</string>
    <string name="password_hint">PASSWORD</string>
    <string name="confirm_password_hint">CONFIRM PASSWORD</string>
    <string name="email_hint">EMAIL</string>
    <string name="password_invalid_error">Password is invalid</string>
    <string name="email_empty_error">Kind of actually need the email...</string>
    <string name="email_invalid_error">That\'s not a valid email address though</string>
    <string name="username_hint">USERNAME</string>
    <string name="beer_search_hint">Beer search</string>
    <string name="search">Search</string>
</resources>
